--- a/src/app/app.footer.component.html
+++ b/src/app/app.footer.component.html
@@ -1,3 +1,3 @@
 <div class="layout-footer">
-    <span class="font-medium ml-2">© BL Systems 2023</span>
+    <span class="font-medium ml-2">© Colonos 2023</span>
 </div>
