--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<!--<div class="grid">
+<div class="grid">
     <div class="col-12 lg:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
@@ -91,4 +91,4 @@
             <p-chart type="radar" [data]="radarData" [style]="{'width': '50%'}"></p-chart>
         </div>
     </div>
-</div>-->
+</div>
