agregar crud de tipos de negocio

--- a/src/app/components/tipo-comunicado/tipo-comunicado.component.html
+++ b/src/app/components/tipo-comunicado/tipo-comunicado.component.html
@@ -24,7 +24,7 @@
                     <h5>Lista de Tipos de Comunicado</h5>
                     <div class="grid fluid mt-auto">
                         <div class="md:col-2 m-auto">
-                            <button pButton icon="pi pi-plus" styleClass="p-button-sm" class="p-button-success p-button-sm" (click)="dialogAddUpEstado([], false)"  pTooltip="Agregar Estado" tooltipPosition="bottom"></button>
+                            <button pButton icon="pi pi-plus" styleClass="p-button-sm" class="p-button-success p-button-sm" (click)="dialogAddUpEstado([], false)"  pTooltip="Agregar Tipo Comunicado" tooltipPosition="bottom"></button>
                         </div>
                     </div>
                     <span class="p-input-icon-left">
