--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
 <div>
     <div class="grid" style="margin: 5em 3em 3em 10em; width: 80%;">
         <div class="col-12 md:col-8" style="padding: 0rem!important;">
-            <img src="assets/layout/images/inicio.jpg" class="imagen-login-m" style="border-radius: 2em 0em 0em 2em;" alt="Image" width="100%" height="100%">
+            <img src="assets/layout/images/casas.png" class="imagen-login-m" style="border-radius: 2em 0em 0em 2em;" alt="Image" width="100%" height="100%">
         </div>
         <div class="col-12 md:col-4" style="padding: 0rem!important;">
             <div class="h-full w-full m-0 py-7 px-4" id="segundo-div-phone" style="border-radius: 0em 2em 2em 0em; background: var(--surface-0); ">
